# gameserver

./: LICENSE  Makefile  README.md  docker-compose.yml  noxfile.py  pyproject.toml  reset_table.sql  schema.sql  tmp.py
app/: api.py  config.py  db.py  model.py  room_model.py
conf/: .my.cnf  logging.yml
tests/: conftest.py  test_room.py  test_user.py
